[package]
name = "traffic-tracker"
version = "0.1.0"
authors = ["Claudio Mattera <claudio@mattera.it>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.4"
clap = "2.32"
rusqlite = { version = "0.16", features = ["chrono"] }
chrono = "0.4"

[dependencies.reqwest]
version = "0.9"
default-features = false
features = ["rustls-tls"]
