[package]
name = "traffic-tracker"
version = "1.0.0"
repository = "https://gitlab.com/claudio.mattera/traffic-tracker"
authors = ["Claudio Mattera <claudio@mattera.it>"]
description = "Track traffic in router Huawei E5172As-22"
edition = "2018"
license = "MIT"
publish = false

[dependencies]
log = "0.4"
env_logger = "0.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.4"
clap = "2.32"
rusqlite = { version = "0.16", features = ["chrono", "bundled"] }
chrono = "0.4"

[dependencies.reqwest]
version = "0.9"
default-features = false
features = ["rustls-tls"]
